<?xml version="1.0" encoding="utf-8"?>

<!--   Copyright 2017-2022 The MathWorks, Inc. -->

<resources>
    <string name="app_name">FuzzyChild</string>
    <string name="thingspeak_title">ThingSpeak Logs</string>
    <string name="tcp_title">TCP Logs</string>
    <string name="mqtt_title">MQTT Logs</string>
    <string name="http_title">HTTP Client Logs</string>
    <string name="empty_hint">Log is empty</string>
    <string name="network_title">Network</string>
    <string name="device_title">Device</string>
    <string name="model_title">Model</string>
    <string name="connection_error">Connection error.</string>
    <!-- Error Messages for TCP. -->
    <string-array name="error_information">
        <item>Sucess</item>
        <item> : Client is not connected. Check your network connection and verify if the client is up and running.\n\n</item>
        <item> : Server is not connected. Check your network connection and verify if the Remote address and Remote port are correct.\n\n</item>
        <item> : TCP Connection established successfully.\n\n</item>
        <item> : Port number #argument# specified in the mask is used by another application. Change the port number and deploy the model again.\n\n</item>
        <item> : Cannot resolve the host name #argument# to IP address. Change the Remote address block parameter and deploy the model again.\n\n</item>
        <item> : Server could not be created. Restart the app.\n\n</item>
        <item> : Client could not be created. Restart the app.\n\n</item>       
    </string-array>   
<!-- Auto Generated strings start-->

<!-- Auto Generated strings end-->






  
</resources>
